infra/gke/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: community
  labels:
    app.kubernetes.io/part-of: ankurah-community
